Fixed styling error on mobile
Bank selection UI was taking over the whole width of screen, this is now fixed

--- a/app/assets/stylesheets/users/home.scss
+++ b/app/assets/stylesheets/users/home.scss
@@ -125,3 +125,8 @@ div.clickable > .panel:hover {
 .form-control.birthdate {
   font-weight: normal;
 }
+
+.home_mongoose_form_element{
+  width: 33%;
+  min-width: 0 !important;
+}
